{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 198,
  "lineage": "d7afb505-29fc-eaaf-cb4b-940daf2be57b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ctf_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d016af584f4febe3",
            "arn": "arn:aws:ec2:us-east-1:368603111517:instance/i-0d970ea39210bf0fb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d970ea39210bf0fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-058d1323102c8bcf2",
            "private_dns": "ip-10-0-1-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.88",
            "public_ip": "44.201.160.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03740b9957de2047e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fa8afb3182f9007",
            "tags": {
              "Name": "CTF Lab Instance"
            },
            "tags_all": {
              "Name": "CTF Lab Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0472e022276126628"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ctf_sg",
            "aws_subnet.ctf_subnet",
            "aws_vpc.ctf_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ctf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368603111517:internet-gateway/igw-09f8d2a47b7ce3ffe",
            "id": "igw-09f8d2a47b7ce3ffe",
            "owner_id": "368603111517",
            "tags": {
              "Name": "CTF Lab IGW"
            },
            "tags_all": {
              "Name": "CTF Lab IGW"
            },
            "vpc_id": "vpc-0ddf5dbf0cc722514"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ctf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ctf_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368603111517:route-table/rtb-0d67004bf4702cd43",
            "id": "rtb-0d67004bf4702cd43",
            "owner_id": "368603111517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f8d2a47b7ce3ffe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CTF Lab Route Table"
            },
            "tags_all": {
              "Name": "CTF Lab Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddf5dbf0cc722514"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ctf_igw",
            "aws_vpc.ctf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ctf_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a7f6f99e173737b",
            "route_table_id": "rtb-0d67004bf4702cd43",
            "subnet_id": "subnet-04fa8afb3182f9007"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ctf_igw",
            "aws_route_table.ctf_route_table",
            "aws_subnet.ctf_subnet",
            "aws_vpc.ctf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ctf_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368603111517:security-group/sg-0472e022276126628",
            "description": "Security group for CTF lab",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0472e022276126628",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ctf_sg",
            "name_prefix": "",
            "owner_id": "368603111517",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CTF Lab Security Group"
            },
            "tags_all": {
              "Name": "CTF Lab Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddf5dbf0cc722514"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ctf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ctf_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368603111517:subnet/subnet-04fa8afb3182f9007",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fa8afb3182f9007",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "368603111517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CTF Lab Subnet"
            },
            "tags_all": {
              "Name": "CTF Lab Subnet"
            },
            "vpc_id": "vpc-0ddf5dbf0cc722514"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ctf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ctf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368603111517:vpc/vpc-0ddf5dbf0cc722514",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0451f999ed3e650a1",
            "default_route_table_id": "rtb-0a044e3c95db23323",
            "default_security_group_id": "sg-027b7ac43782a8ddf",
            "dhcp_options_id": "dopt-04c99c08e0b6bbf16",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ddf5dbf0cc722514",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a044e3c95db23323",
            "owner_id": "368603111517",
            "tags": {
              "Name": "CTF Lab VPC"
            },
            "tags_all": {
              "Name": "CTF Lab VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}